--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,15 @@
         "test_*.py"
     ],
     "python.envFile": "${workspaceFolder}/.env",
-    "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": true,
+    "python.testing.pytestEnabled": false,
+    "python.autoComplete.extraPaths": [
+        "${workspaceFolder}/SimpleFacturaSDK"
+    ],
+    "terminal.integrated.env.linux": {
+        "PYTHONPATH": "${workspaceFolder}/SimpleFacturaSDK"
+    },
+    "terminal.integrated.env.windows": {
+        "PYTHONPATH": "${workspaceFolder}\\SimpleFacturaSDK"
+    }
 }
