--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,16 +6,6 @@
         "-p",
         "test_*.py"
     ],
-    "python.envFile": "${workspaceFolder}/.env",
-    "python.testing.unittestEnabled": true,
-    "python.autoComplete.extraPaths": [
-        "${workspaceFolder}/SimpleFacturaSDK"
-    ],
-    "terminal.integrated.env.linux": {
-        "PYTHONPATH": "${workspaceFolder}/SimpleFacturaSDK"
-    },
-    "terminal.integrated.env.windows": {
-        "PYTHONPATH": "${workspaceFolder}\\SimpleFacturaSDK"
-    },
-    "python.testing.pytestEnabled": false
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true
 }
