--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
     "python.testing.unittestEnabled": true,
-    "python.testing.pytestEnabled": true,
+    "python.testing.pytestEnabled": false,
     "python.testing.pytestArgs": [
+        "--asyncio-mode=strict",
         "SimpleFacturaSDK/Test"
     ],
     "python.envFile": "${workspaceFolder}/.env",
     "terminal.integrated.env.windows": {
-        "PYTHONPATH": "${workspaceFolder}"
+        "PYTHONPATH": "${workspaceFolder}:${workspaceFolder}/SimpleFacturaSDK"
     },
     "python.testing.unittestArgs": [
         "-v",
