se realizaron cambios

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # .env
-USERNAME=demo@chilesystems.com
-PASSWORD=Rv8Il4eV
-BASE_URL=https://backend-qa.simplefactura.cl
+SF_USERNAME=demo@chilesystems.com
+SF_PASSWORD=Rv8Il4eV
+SF_BASE_URL=https://backend-qa.simplefactura.cl
+
 
 PYTHONPATH=.
