--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # .env
 SF_USERNAME=demo@chilesystems.com
 SF_PASSWORD=Rv8Il4eV
-SF_BASE_URL=https://backend-qa.simplefactura.cl
+SF_BASE_URL=https://api.simplefactura.cl
 
 
 PYTHONPATH=.
