--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "SimpleFacturaSDK"
-version = "1.1.2"
+version = "1.1.3"
 description = "SDK para la integración con los servicios de SimpleFactura"
 readme = "README.md"
 authors = [
@@ -23,12 +23,16 @@ dependencies = [
     "requests-toolbelt",
     "pydantic",
     "httpx",
-    "pytest",
-    "requests-mock",
-    "python-dotenv",
-    "pytest-asyncio",
     "requests",
+    "python-dotenv",
     "aiofiles"
+]
+
+[project.optional-dependencies]
+test = [
+    "pytest",
+    "pytest-asyncio",
+    "requests-mock"
 ]
 
 [tool.setuptools.packages.find]
